--- a/Share.html
+++ b/Share.html
@@ -436,7 +436,8 @@
         <p class="lead font-weight-normal">Storefront là một lựa chọn nhanh để buôn bán đồ rẻ. Kết
             nối người mua và người bán một cách an toàn, tiện lợi và rõ ràng.<br>
             Đăng tin rao vặt hoàn toàn miễn phí</p>
-        <a class="btn btn-outline-secondary" href="#footer">Tải app để tìm hiểu thêm</a>
+        <a class="btn btn-outline-secondary" href="https://apps.apple.com/app/apple-store/id1523431479">Tải iOS app để tìm hiểu thêm</a>
+	<a class="btn btn-outline-secondary" href="https://play.google.com/store/apps/details?id=com.itchybumr.garagesale&hl=vi">Tải Android app để tìm hiểu thêm</a>
     </div>
     <div class="product-device shadow-sm d-none d-md-block">
         <img src='https://lh3.googleusercontent.com/xq5KmRtrgViw5y6UUiN9ZiUHAzIsZ3jPwC9UXLWoI65SJ7hCs32exhVcFcOFoLxeQgs=w3000-h1780-rw'
