--- a/Share.html
+++ b/Share.html
@@ -27,8 +27,8 @@
     <meta property="og:description"
           content="Storefront là một lựa chọn nhanh để buôn bán đồ rẻ. Kết nối người mua và người bán một cách an toàn, tiện lợi và rõ ràng.Đăng tin rao vặt hoàn toàn miễn phí">
 <!--          id="ember64" class="ember-view">-->
-<!--    <meta name="apple-itunes-app" content="app-id=1523431479">-->
-<!--    <meta name="google-play-app" content="app-id=com.itchybumr.garagesale">-->
+    <meta name="apple-itunes-app" content="app-id=1523431479">
+    <meta name="google-play-app" content="app-id=com.itchybumr.garagesale">
 
     <!-- Bootstrap core CSS -->
     <link href="./bootstrap.css" rel="stylesheet">
